--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   http: ^1.3.0
   google_maps_flutter: ^2.12.1
   path_provider: ^2.1.5
-  path: ^1.9.1
+  path: any
   sqflite: ^2.4.2
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.0
