--- a/.github/workflows/deploy-appetize.yml
+++ b/.github/workflows/deploy-appetize.yml
@@ -27,6 +27,20 @@ jobs:
           flutter-version: '3.27.1'
           channel: 'stable'
       
+      - name: 🔧 Create config.dart
+        env:
+          GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
+          BACKEND_URL: ${{ secrets.BACKEND_URL }}
+        run: |
+          cat > mobile/lib/config.dart << EOF
+          import 'dart:io';
+
+          class AppConfig {
+            static const String googleMapsApiKey = '$GOOGLE_MAPS_API_KEY';
+            static const String backendUrl = '$BACKEND_URL';
+          }
+          EOF
+      
       - name: 📦 Install dependencies
         run: |
           cd mobile
