--- a/.github/workflows/deploy-appetize.yml
+++ b/.github/workflows/deploy-appetize.yml
@@ -40,6 +40,10 @@ jobs:
             static const String backendUrl = '$BACKEND_URL';
           }
           EOF
+
+      - name: 🔧 Create google-services.json
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 --decode > mobile/android/app/google-services.json
       
       - name: 📦 Install dependencies
         run: |
